test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_array_declarator_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  (
  *
  )
  (
  identifier(ptr_to_array)
  [
  const int(3)
  ]
  )
  =
  const int(0)
  ;
  return
  const int(0)
  ;
  }
